<resources>
    <string name="app_name">Dark Pattern Shield</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="nftitle">Dark Pattern Detected</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="accessibility_service_label" >accessability</string>
    <string name="accessibility_service_description">text reader</string>

    <string name="ia">
        It means falsely stating or implying the sense of urgency or scarcity so as to mislead a user into making an immediate purchase or take an immediate action, which may lead to a purchase; including:\n\n

        i. Showing false popularity of a product or service to manipulate user decision;\n
        ii. Stating that quantities of a particular product or service are more limited than they actually are.
    </string>


    <string name ="ib">
         Illustrations:\n\n
        a. Presenting false data on high demand without appropriate context. For instance, “Only 2 rooms left! 30 others are looking at this right now.”
        \nb. Falsely creating time-bound pressure to make a purchase, such as describing a sale as an ‘exclusive’ sale for a limited time only for a select group of users.
    </string>

    <string name="iia">
        It means inclusion of additional items such as products, services, payments to charity/donation at the time of checkout from a platform, without the consent of the user, such that the total amount payable by the user is more than the amount payable for the product(s) and/or service(s) chosen by the user.\n
        \nProvided that the addition of free samples or providing complimentary services or addition of necessary fees disclosed at the time of purchase, shall not be considered basket sneaking.\n
        \nExplanation- The term “necessary fees” means, the fees which is necessary to fulfill the completion of the order such as delivery charges, gift wrapping, additional taxes on the product charged by the government or any other charges which are explicitly disclosed to the consumer at the time of purchase.
    </string>

    <string name="iib">
        Illustrations:\n\n
        a. Automatic addition of paid ancillary services with a pre-ticked box or otherwise to the cart when a consumer is purchasing a product(s) and/or service(s).\n
        b. A user purchases a single salon service, but while checking out a subscription to the salon service is automatically added.\n
        c. Automatically adding travel insurance while a user purchases a flight ticket.
    </string>

    <string name="iiia">
        It means using a phrase, video, audio or any other means to create a sense of fear or shame or ridicule or guilt in the mind of the user, so as to nudge the user to act in a certain way that results in the user purchasing a product or service from the platform or continuing a subscription of a service.
    </string>

    <string name="iiib">
        Illustrations:\n
        \na. A platform for booking flight tickets using the phrase “I will stay unsecured”, when a user does not include insurance in their cart.
        \nb. A platform that adds a charity in the basket using a phrase “charity is for rich, I don’t care”.
    </string>

    <string name="iva">
        It shall mean forcing a user into taking an action that would require the user to buy any additional good(s) or subscribe or sign up for an unrelated service, in order to buy or subscribe to the product/service originally intended by the user.\n
    </string>

    <string name="ivb">
        Illustrations:\n
        a. prohibiting a user from continuing with the use of product or service for the consideration originally paid and contracted for, unless they upgrade for a higher rate or fees.
        \nb. forcing a user to subscribe to a newsletter in order to purchase a product.
    </string>

    <string name="va">
        It means the process-\n\n
        i. of making cancellation of a paid subscription impossible or a complex and lengthy process; or
        \nii. hiding the cancellation option for a subscription; or
        \niii. forcing a user to provide payment details and/or authorization for auto debits for availing a free subscription;
        \niv. making the instructions related to cancellation of subscription ambiguous, latent, confusing, cumbersome.
    </string>

    <string name="via">
        It means a design element that manipulates the user interface in ways that (a) highlights certain specific information; and (b) obscures other relevant information relative to the other information; to misdirect a user from taking an action desired by her.
    </string>

    <string name="vib">
        Illustrations:\n\n
        a. Designing a light colored option for selecting “No” in response to a pop-up asking a user if they wish to make a purchase or concealing the cancellation symbol in tiny font or changing the meaning of key symbols to mean the opposite.
        \nb. An ‘X’ icon on the top-right corner of a pop-up screen leading to opening-up of another ad rather than closing it.
        \nc. Designing a virtually less prominent designing a light colored option for selecting “No” in response to a pop-up asking a user if they wish to make a purchase.
    </string>

    <string name="viia">
        It means the practice of advertising a particular outcome based on the user’s action but deceptively serving an alternate outcome.
    </string>

    <string name="viib">
        Illustrations:\n\n
        a. A seller offers a quality product at a cheap price but when the consumer is about to pay/buy, the seller states that the product is no longer available and instead offers a similar looking product but more expensive.
    </string>

    <string name="viiia">
        “Drip pricing” means a practice whereby-\n\n
        i. elements of prices are not revealed upfront or are revealed surreptitiously within the user experience; or\n
        ii. revealing the price post-confirmation of purchase, i.e. charging an amount higher than the amount disclosed at the time of checkout; or\n
        iii. a product or service is advertised as free without appropriate disclosure of the fact that the continuation of use requires in-app purchase; or\n
        iv. a user is prevented from availing a service which is already paid for unless something additional is purchased\n\n
        Explanation-: A marketplace e-commerce entity shall not be liable for price fluctuations to the extent attributable to prices changes by third party sellers or due to other factors beyond their control.
    </string>

    <string name="viiib">
        Illustrations:\n\n
        a. A consumer is booking a flight, the online platform showcases the price as X at the checkout page, and when payment is being made, price Y (which is more than X) has been charged by the platform to the consumer.\n
        b. A consumer has downloaded a mobile application for playing chess, which was advertised as ‘play chess for free’. However, after 7 days, the app asked for a payment to continue playing chess. The fact that the free version of the game is available only for a limited time, i.e., 7 days in this case, was not disclosed to the consumer at the time of downloading the mobile application.
    </string>

    <string name="ixa">
        “Disguised advertisement” means a practice of posing, masking advertisements as other types of content such as user generated content or new articles or false advertisements.\n\n
        Explanation:\n\n
        a) For the purposes of this clause, the expression “disguised advertisement” also includes misleading advertisement as provided under section 2 (1)(28) of the CP
        Act 2019 and the “Guidelines for Prevention of Misleading Advertisements and Endorsements for Misleading Advertisements, 2022” shall also be applicable to it.\n
        b) In relation to content posted by a seller or an advertiser on a platform, the responsibility of making the disclosure that such content is an advertisement shall be on such seller or advertiser.
    </string>

    <string name="xa">
        It means a dark pattern due to which users face an overload of requests, information, options, or interruptions; unrelated to the intended purchase of goods or services, which disrupts the intended transaction.
    </string>

    <string name="xb">
        Illustrations:\n\n
a. Websites asking a user to download their app, again and again\n
b. Platforms asking users to give their phone numbers for supposedly security purposes\n
c. Constant request to turn on notifications with no option to say “NO”.
    </string>
    <string name="dark_patterns_shield">Dark Patterns Shield</string>
    <string name="dps_logo">DPS Logo</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="setup_floating_widget">Setup Floating Widget</string>
    <string name="a_mindsinmotion_product">A MindsinMotion Product</string>
</resources>