<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvh1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="What are Dark Patterns?"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dark patterns are deceptive design techniques used in user interfaces to manipulate users into taking actions that they might not want to take. These patterns can be found in various digital products, websites, and apps and are designed to trick users, exploit their psychological vulnerabilities, or lead them to make decisions that benefit the service provider rather than the user. Dark patterns are often considered unethical as they go against principles of transparency, honesty, and user-centric design."
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvh2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="Specified Dark Patterns"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. False Urgency"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ia" />

                <TextView
                    android:id="@+id/tvib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ib"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="2. Basket Sneaking"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tviia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iia" />

                <TextView
                    android:id="@+id/tviib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/iib"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhiii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="3. Confirm Shaming"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tviiia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iiia" />

                <TextView
                    android:id="@+id/tvc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/iiib"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="4. Forced Action"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tviva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iva" />

                <TextView
                    android:id="@+id/tvivb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ivb"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="5. Subscription Trap"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/va" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhvi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="6. Interface interference"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvvia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/via" />

                <TextView
                    android:id="@+id/tvvib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/vib"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhvii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="7. Bait and switch"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvviia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viia" />

                <TextView
                    android:id="@+id/tvviib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/viib"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhviii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="8. Drip pricing"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvviiia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viiia" />

                <TextView
                    android:id="@+id/tvviiib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/viiib"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="9. Disguised advertisement"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvixa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ixa" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvhx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="10. Nagging"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvxa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xa" />

                <TextView
                    android:id="@+id/tvxb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/xb"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>